<resources>
    <string name="app_name">My Application</string>
    <string name="insurance_premium">Insurance Premium</string>
    <string name="age">Age :</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="TOTALPREMIUM" />
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="premium">Premium :</string>
    <string name="yes">Yes</string>
    <string name="smokes">Smokes :</string>
</resources>
