<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/insurance_premium"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/age"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <Spinner
        android:id="@+id/AgeSpinner"
        android:layout_width="165dp"
        android:layout_height="31dp"
        android:layout_marginEnd="64dp"
        android:addStatesFromChildren="false"
        android:entries="@array/Age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Age" />

    <TextView
        android:id="@+id/Gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/gender"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/Age"
        app:layout_constraintTop_toBottomOf="@+id/Age" />

    <RadioGroup
        android:id="@+id/GenderGroup"
        android:layout_width="212dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toEndOf="@+id/Gender"
        app:layout_constraintTop_toBottomOf="@+id/AgeSpinner">

        <RadioButton
            android:id="@+id/Male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/Female"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:text="@string/female"
            android:textSize="24sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/Smokes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/smokes"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/Gender"
        app:layout_constraintTop_toBottomOf="@+id/Gender" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        app:layout_constraintStart_toStartOf="@+id/GenderGroup"
        app:layout_constraintTop_toTopOf="@+id/Smokes" />

    <TextView
        android:id="@+id/premium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/premium"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/Smokes"
        app:layout_constraintTop_toBottomOf="@+id/Smokes" />

    <TextView
        android:id="@+id/TotalPremium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/TOTALPREMIUM"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/premium"
        app:layout_constraintTop_toTopOf="@+id/premium" />

    <Button
        android:id="@+id/Calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toStartOf="@+id/reset"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/premium" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Calculate"
        app:layout_constraintTop_toTopOf="@+id/Calculate" />

</androidx.constraintlayout.widget.ConstraintLayout>